<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:textSize="24sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/display"
        android:rowCount="5"
        android:columnCount="4">

        <!-- Row 1 -->
        <!-- Buttons with larger dimensions -->
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_3" />


        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_divide" />

        <!-- Row 2 -->
        <!-- Buttons with larger dimensions -->
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_6" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_multiply" />

        <!-- Row 3 -->
        <!-- Buttons with larger dimensions -->
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_9" />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_subtract" />

        <!-- Row 4 -->
        <!-- Buttons with larger dimensions -->
        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_0" />

        <Button
            android:id="@+id/buttonSign"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_sign" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_clear" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_add" />
        <!-- Buttons with larger dimensions -->
        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_back" />

        <Button
            android:id="@+id/buttonSqrt"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/button_sqrt" />

        <Button
            android:id="@+id/buttonEquals"
            style="@style/CalculatorButtonStyle"
            android:layout_width="99dp"
            android:layout_height="92dp"
            android:onClick="onEqualsButtonClick"
            android:text="=" />

    </GridLayout>
</RelativeLayout>
